log
src/Channels.cpp:723:0: error: unterminated argument list invoking macro "FD_ISSET"
 
 ^
In file included from src/Channels.cpp:1:0:
src/Channels.hpp:42:2: error: ‘library’ does not name a type
  library _lib;
  ^
src/Channels.cpp: In constructor ‘Channels::Channels(std::string, std::string)’:
src/Channels.cpp:20:36: error: ‘_socket’ was not declared in this scope
             chnl.canal[_n_socks] = _socket[_n_socks];
                                    ^
src/Channels.cpp:34:5: error: ‘_timer’ was not declared in this scope
     _timer = _timer/1000;
     ^
src/Channels.cpp: At global scope:
src/Channels.cpp:51:16: error: expected initializer before ‘lire_message’
 void  Channels lire_message(AddrStorage * addr, char buf[],int s)
                ^
src/Channels.cpp: In member function ‘void Channels::run()’:
src/Channels.cpp:116:48: error: ‘_socket’ was not declared in this scope
                         lire_message( addr,buf,_socket[i]);
                                                ^
src/Channels.cpp:117:28: error: expected ‘(’ before ‘chnl’
                         if chnl.canal[i]!=_socket[i]
                            ^
src/Channels.cpp: In member function ‘void Channels::diffuser_message(CANAL, Client, char*)’:
src/Channels.cpp:139:12: error: ‘FD_ISSET’ was not declared in this scope
         if(FD_ISSET(cl.mySocket(),
            ^
src/Channels.cpp:139:12: error: expected ‘)’ at end of input
src/Channels.cpp:139:12: error: expected statement at end of input
src/Channels.cpp:137:16: warning: unused variable ‘readfds’ [-Wunused-variable]
         fd_set readfds;
                ^
src/Channels.cpp:138:13: warning: unused variable ‘max’ [-Wunused-variable]
         int max = 0;
             ^
src/Channels.cpp:139:12: error: expected ‘}’ at end of input
         if(FD_ISSET(cl.mySocket(),
            ^
make: *** [Channels.o] Erreur 1
